@@ -259,16 +259,14 @@ EWMicroRecorderDevice::DeclareInner(const Declaration *decl)
   if (!TryConnect())
     return false;
 
-  char *p = strstr(user_data, "FLIGHT DECLARATION");
-  if (p != NULL) {
-    p = strstr(p, "Description:");
-    if (p != NULL)
-      *p = 0;
-  }
+  char *p = strstr(user_data, "USER DETAILS");
+  if (p != NULL)
+    *p = 0;
 
   port->Write('\x18');         // start to upload file
   port->Write(user_data);
 
+  port->Write("USER DETAILS\r\n--------------\r\n\r\n");
   EWMicroRecorderPrintf(port, _T("%-15s %s\r\n"),
                         _T("Pilot Name:"), decl->PilotName.c_str());
   EWMicroRecorderPrintf(port, _T("%-15s %s\r\n"),
@@ -277,6 +275,7 @@ EWMicroRecorderDevice::DeclareInner(const Declaration *decl)
                         _T("Aircraft Type:"), decl->AircraftType.c_str());
   EWMicroRecorderPrintf(port, _T("%-15s %s\r\n"),
                         _T("Aircraft ID:"), decl->AircraftRego.c_str());
+  port->Write("\r\nFLIGHT DECLARATION\r\n-------------------\r\n\r\n");
 
   EWMicroRecorderPrintf(port, _T("%-15s %s\r\n"),
                         _T("Description:"), _T("XCSoar task declaration"));
